--- a/pytest.ini
+++ b/pytest.ini
@@ -6,3 +6,4 @@ markers=
         smoke : run smoke test
         product : run product testcases
         fixture_example: to run fixture example testcases
+        selenium_example: to run selenium testcase
