--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,4 @@ markers=
         product : run product testcases
         fixture_example: to run fixture example testcases
         selenium_example: to run selenium testcase
+        param_testcase: to run param testcase
