--- a/pytest.ini
+++ b/pytest.ini
@@ -8,3 +8,4 @@ markers=
         fixture_example: to run fixture example testcases
         selenium_example: to run selenium testcase
         param_testcase: to run param testcase
+        fixture_sampl1: sample fixture parametrization
